<resources>
    <string name="app_name">EduSafety</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">108467967394-ai7ktj3vjfv1682ric30n40ed2gmblnv.apps.googleusercontent.com</string>
    <string name="question1">Seberapa sering Anda mengalami kekerasan yang membuat Anda merasa terganggu atau merasa terintimidasi (perlakuan yang menyebabkan kurang kepercayaan diri atau takut) ?</string>
    <string name="question2">Kapan terakhir kali Anda mengalami kekerasan ?</string>
    <string name="question3">Apakah anda bisa mengatasi masalah setelah mendapatkan pengarahan dari orang lain ?</string>
    <string name="question4">Apa ada dampak dari kekerasan yang Anda alami ?</string>
    <string name="question5">Apakah dampak kekerasan yang Anda alami mempengaruhi aktivitas dan kehadiran di Kampus ?</string>
    <string name="question6">Apa dampak dari kekerasan yang terjadi pada Anda ?</string>
    <string name="question7">Apakah ada orang lain yang tahu mengenai kekerasan yang Anda alami ?</string>
    <string name="question8">Apa yang Anda lakukan pada saat tindakan kekerasan terjadi ?</string>
    <string name="question9">Apakah Anda merasa aman berada di sekitar Kampus setiap harinya ?</string>
    <string name="question10">Apakah sudah melaporkan kekerasan yang Anda alami ke pihak Kampus ?</string>
    <string name="question11">Apakah ada tindakan atau langkah-langkah yang telah diambil oleh pihak Kampus untuk menangani perbuatan kekerasan?</string>
    <string name="question12">Apakah anda diancam atau dipaksa untuk melakukan sesuatu yang tidak anda inginkan?</string>
    <string name="kategori">Kategori</string>
    <string name="verbal_abuse">Verbal Abuse</string>
    <string name="nama_korban">Nama Korban</string>
    <string name="nama">Dave Leonard</string>
    <string name="nama_pelaku">Nama Pelaku</string>
    <string name="universitas">Universitas</string>
    <string name="tanggal_kejadian">Tanggal Kejadian</string>
    <string name="kronologi">Kronologi</string>
    <string name="bukti">Bukti</string>
    <string name="submit">Submit</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="worst_leaderboard">Worst Leaderboard</string>
    <string name="konsultasi">Konsultasi</string>
    <string name="coming_soon">Will be available soon...</string>
    <string name="save">Save</string>
    <string name="social">Social</string>
    <string name="verbal">Verbal</string>
    <string name="physical">Physical</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="description_forgot_password">Don\'t worry! It occurs. Please enter the email address linked with your account.</string>
    <string name="send_code">Send Code</string>
    <string name="create_new_password">Create new password</string>
    <string name="create_new_password_desc">Your new password must be unique from those previously used.</string>
    <string name="verbalSort">Verbal</string>
    <string name="socialSort">Social</string>
    <string name="physicalSort">Physical</string>

    <string-array name="report_category">
        <item>Verbal Abuse</item>
        <item>Physical Assault</item>
        <item>Social</item>
    </string-array>

    <string-array name="question_1">
        <item>Sering</item>
        <item>Jarang</item>
        <item>Tidak Pernah</item>
    </string-array>

    <string-array name="question_2">
        <item>Beberapa Hari Terakhir</item>
        <item>Beberapa Minggu Terakhir</item>
        <item>Beberapa Bulan Terakhir</item>
    </string-array>

    <string-array name="often_question">
        <item>Ya</item>
        <item>Mungkin</item>
        <item>Tidak</item>
    </string-array>

    <string-array name="question_6">
        <item>Melukai Diri Sendiri</item>
        <item>Trauma</item>
        <item>Dendam</item>
        <item>Takut</item>
        <item>Tidak Ada</item>
    </string-array>

    <string-array name="question_8">
        <item>Membiarkan</item>
        <item>Membalas</item>
        <item>Melapor</item>
    </string-array>

    <string-array name="question_10">
        <item>Sudah</item>
        <item>Belum</item>
    </string-array>

</resources>