<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="22dp">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_background"
        android:padding="5dp"
        android:src="@drawable/baseline_keyboard_arrow_left_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/headerTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/urbanist_bold"
        android:text="@string/forgot_password"
        android:textColor="@color/dark"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backButton" />

    <TextView
        android:id="@+id/subHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/urbanist_medium"
        android:text="@string/description_forgot_password"
        android:textColor="@color/dark_gray"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtEmailContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:helperText=""
        app:helperTextTextColor="@android:color/holo_red_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColorHint="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/subHeader">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:lines="1"
            android:inputType="textEmailAddress"
            android:layout_height="56dp"
            android:textSize="15sp"
            android:fontFamily="@font/urbanist_medium"
            android:background="@drawable/rounded_input"
            android:hint="Enter Your Email"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/sendCodeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:height="56dp"
        android:background="@drawable/rectangle_background"
        android:enabled="false"
        android:fontFamily="@font/urbanist_semibold"
        android:text="@string/send_code"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/edtEmailContainer" />


</androidx.constraintlayout.widget.ConstraintLayout>