<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.HomeFragment">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="?attr/actionBarSize"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="22dp">

            <ImageView
                android:id="@+id/profile_photo"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:clipToOutline="true"
                android:src="@drawable/avatar"
                android:outlineProvider="background"
                android:background="@drawable/circle_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@id/profile_photo"
                app:layout_constraintStart_toEndOf="@id/profile_photo"
                app:layout_constraintTop_toTopOf="@id/profile_photo">

                <TextView
                    android:id="@+id/name_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="3dp"
                    android:fontFamily="@font/urbanist_bold"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@id/profile_photo"
                    app:layout_constraintTop_toTopOf="@+id/profile_photo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="3dp"
                    android:fontFamily="@font/urbanist_medium"
                    android:text="Welcome Back!"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/profile_photo"
                    app:layout_constraintStart_toEndOf="@id/profile_photo"
                    app:layout_constraintTop_toBottomOf="@id/name_profile" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/card_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/rectangle_background"
                android:orientation="vertical"
                android:paddingTop="43dp"
                android:backgroundTint="#F7F8F9"
                android:paddingBottom="8dp"
                app:layout_constraintTop_toBottomOf="@+id/profile_photo"
                tools:layout_editor_absoluteX="22dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="10dp">

                    <ImageView
                        android:id="@+id/exclamation_mark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/tanda_seru"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="@id/exclamation_mark"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/exclamation_mark">

                        <TextView
                            android:id="@+id/reportsTotalNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/urbanist_bold"
                            android:gravity="center"
                            android:textColor="@color/primary"
                            android:textSize="30sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:gravity="center"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/urbanist_bold"
                            android:text="Reports Total"
                            android:textColor="@color/black"
                            android:textSize="24sp"/>

                    </LinearLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:orientation="vertical"
                        android:paddingHorizontal="22dp">

                        <TextView
                            android:id="@+id/verbalNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/urbanist_bold"
                            android:gravity="center"
                            android:textColor="@color/primary"
                            android:textSize="15sp"
                            app:layout_constraintStart_toStartOf="parent" />

                        <TextView
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/urbanist_bold"
                            android:text="@string/verbal"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:orientation="vertical"
                        android:paddingHorizontal="22dp">

                        <TextView
                            android:id="@+id/socialNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/urbanist_bold"
                            android:gravity="center"
                            android:textColor="@color/primary"
                            android:textSize="15sp"
                            app:layout_constraintStart_toStartOf="parent" />

                        <TextView
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/urbanist_bold"
                            android:text="@string/social"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:orientation="vertical"
                        android:paddingHorizontal="22dp">

                        <TextView
                            android:id="@+id/physicalNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/urbanist_bold"
                            android:gravity="center"
                            android:textColor="@color/primary"
                            android:textSize="15sp"
                            app:layout_constraintStart_toStartOf="parent" />

                        <TextView
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/urbanist_bold"
                            android:text="@string/physical"
                            android:textSize="14sp" />

                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/reports_for"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_status">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/report_for"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:baselineAlignBottom="true"
                        android:fontFamily="@font/urbanist_bold"
                        android:text="Your Reports"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />




                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/reports_for">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/recentReportContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/recent_report"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:baselineAlignBottom="true"
                        android:fontFamily="@font/urbanist_bold"
                        android:text="Recent Report"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_keyboard_arrow_right_24"
                        android:background="@drawable/elipse_background"
                        app:layout_constraintBaseline_toBaselineOf="@+id/recent_report"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/recent_report" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rc_recent_report"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>